# theora-player

./: .gitignore  CMakeLists.txt  Makefile  README.md
conan/: CMakeLists.txt  conanfile.py
include/: theora-player.h
src/: main.cpp  theora-player.cpp
test/: CMakeLists.txt  main.cpp
test/.cache/clangd/index/: main.cpp.6D6D4B4E7E83FF37.idx
test/res/: sample2.ogv
